<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bacecek.yamblz.ui.activity.SettingsActivity"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_temp_units"
                    style="@style/SettingsItem">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/SettingsItemTitle"
                        android:text="@string/settings_units_title"/>

                    <com.bacecek.yamblz.ui.widget.SwitchTemperature
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch_temp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/divider_settings"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_interval_update"
                    style="@style/SettingsItem">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/SettingsItemTitle"
                        android:text="@string/settings_period_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_settings_period"
                        style="@style/SettingsItemSubtitle"
                        tools:text="5 min"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/divider_settings"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_city"
                    style="@style/SettingsItem">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/SettingsItemTitle"
                        android:text="@string/settings_city_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_city"
                        android:ellipsize="end"
                        style="@style/SettingsItemSubtitle"
                        tools:text="Moscow"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>
