<resources>
    <string name="app_name">Weather</string>

    <string name="drawer_open">Open navigation view</string>
    <string name="drawer_close">Close navigation view</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="moscow">Moscow</string>
    <string name="moscow_request" translatable="false">moscow</string>
    <string name="try_again">Try again</string>

    <!--Templates for showing weather information-->
    <string name="template_temperature_celsius">%1$.1f &#176;C</string>
    <string name="template_temperature_fahrenheit">%1$.1f &#176;F</string>
    <string name="template_wind_speed">%1$.1f m/s</string>
    <string name="template_humidity">%1$d%%</string>

    <!--Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_about_app">About app</string>

    <!--Errors-->
    <string name="error_no_email_app">There is no E-mail application. E-mail copied in clipboard.</string>

    <!--About-->
    <string name="version">Version</string>
    <string name="about_app">Homework on the project \"Mobilization\" organized by Yandex</string>
    <string name="about_contact_me">Contact me</string>
    <string name="about_source_code_title">Source code on GitHub</string>
    <string name="about_email" translatable="false">buzmakov.da@gmail.com</string>
    <string name="about_source_code" translatable="false">https://github.com/bacecek/yamblz</string>
    <string name="about_contact_via">Contact via…</string>

    <!--Settings-->
    <string name="settings_units_title">Temperature</string>
    <string name="settings_units_celsius" translatable="false">&#176;C</string>
    <string name="settings_units_fahrenheit" translatable="false">&#176;F</string>
    <string name="settings_period_title">Update the weather every</string>
    <string name="settings_city_title">City</string>

    <!--Time intervals-->
    <string-array name="array_intervals_titles">
        <item>Off</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>

    <integer-array name="array_intervals_values">
        <item>0</item>
        <item>1800</item>
        <item>3600</item>
        <item>43200</item>
        <item>86400</item>
    </integer-array>

    <!--Temperature units-->
    <string name="metric" translatable="false">metric</string>
    <string name="imperial" translatable="false">imperial</string>

    <!--Time formats-->
    <string name="format_sunrise">H:mm</string>
    <string name="format_update_weather">EEEE h:mm a</string>

    <!--Weather conditions ids-->
    <string name="condition_sun_day" translatable="false">01d</string>
    <string name="condition_sun_night" translatable="false">01n</string>
    <string name="condition_sun_clouds_day" translatable="false">02d</string>
    <string name="condition_sun_clouds_night" translatable="false">02n</string>
    <string name="condition_clouds_day" translatable="false">03d</string>
    <string name="condition_clouds_night" translatable="false">03n</string>
    <string name="condition_broken_clouds_day" translatable="false">04d</string>
    <string name="condition_broken_clouds_night" translatable="false">04n</string>
    <string name="condition_rain_day" translatable="false">09d</string>
    <string name="condition_rain_night" translatable="false">09n</string>
    <string name="condition_sun_rain_day" translatable="false">10d</string>
    <string name="condition_sun_rain_night" translatable="false">10n</string>
    <string name="condition_storm_day" translatable="false">11d</string>
    <string name="condition_storm_night" translatable="false">11n</string>
    <string name="condition_snow_day" translatable="false">13d</string>
    <string name="condition_snow_night" translatable="false">13n</string>
    <string name="condition_mist_day" translatable="false">50d</string>
    <string name="condition_mist_night" translatable="false">50n</string>

    <!--Errors-->
    <string name="error_network">Can\'t load weather info</string>

    <!--Place-->
    <string name="choose_city_hint">Type city name</string>
</resources>
